salesforce-main/src/main/default/objects/FlowSettings__c/FlowSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Mutability settings for flows</description>
    <label>FlowSettings</label>
</CustomObject>