salesforce-main/src/main/default/objects/FlowSettings__c/fields/Case_Automation__c.field-meta.xml
<CustomField>
    <fullName>Case_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle mutability of the Case Automation flow</description>
    <inlineHelpText>Mutes the Case Automation flow</inlineHelpText>
    <label>Case Automation</label>
    <type>Checkbox</type>
</CustomField>