salesforce-main/src/main/default/objects/FlowSettings__c/fields/Case_Fast_Updates__c.field-meta.xml
<CustomField>
    <fullName>Case_Fast_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle mutability of the Case Fast Updates flow</description>
    <inlineHelpText>Mutes  the Case Fast Updates flow</inlineHelpText>
    <label>Case Fast Updates</label>
    <type>Checkbox</type>
</CustomField>