salesforce-main/src/main/default/objects/FlowSettings__c/fields/Case_Submission_Automation__c.field-meta.xml
<CustomField>
    <fullName>Case_Submission_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle mutability of the Case Submission Automation flow</description>
    <inlineHelpText>Mutes the Case Submission Automation flow</inlineHelpText>
    <label>Case Submission Automation</label>
    <type>Checkbox</type>
</CustomField>