salesforce-main/src/main/default/objects/FlowSettings__c/fields/Lead_Automation__c.field-meta.xml
<CustomField>
    <fullName>Lead_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle mutability of the Lead Automation flow</description>
    <inlineHelpText>Mutes the Lead Automation flow</inlineHelpText>
    <label>Lead Automation</label>
    <type>Checkbox</type>
</CustomField>