salesforce-main/src/main/default/objects/FlowSettings__c/fields/Lead_Fast_Updates__c.field-meta.xml
<CustomField>
    <fullName>Lead_Fast_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle mutability of the Lead Fast Updates flow</description>
    <inlineHelpText>Mutes the Lead Fast Updates flow</inlineHelpText>
    <label>Lead Fast Updates</label>
    <type>Checkbox</type>
</CustomField>