salesforce-main/src/main/default/objects/FlowSettings__c/fields/Lead_Forensics_Visit_Automation__c.field-meta.xml
<CustomField>
    <fullName>Lead_Forensics_Visit_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle mutability of the Lead Forensics Visit Automation flow</description>
    <inlineHelpText>Mutes the Lead Forensics Visit Automation flow</inlineHelpText>
    <label>Lead Forensics Visit Automation</label>
    <type>Checkbox</type>
</CustomField>