salesforce-main/src/main/default/objects/FlowSettings__c/fields/Lead_Re_engaged_Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead_Re_engaged_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle mutability of the lead Re-engaged Lead flow</description>
    <inlineHelpText>Mutes the Re-engaged Lead flow</inlineHelpText>
    <label>Lead - Re-engaged Lead</label>
    <type>Checkbox</type>
</CustomField>