salesforce-main/src/main/default/objects/FlowSettings__c/fields/Payment_Custom_Automation__c.field-meta.xml
<CustomField>
    <fullName>Payment_Custom_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The flag that will bypass the Payment Automation which is responsible for payment records will be associated with the opportunity with the closest programme start date.</description>
    <inlineHelpText>The flag that will bypass the Payment Automation which is responsible for payment records will be associated with the opportunity with the closest programme start date.</inlineHelpText>
    <label>Payment (Custom) Automation</label>
    <type>Checkbox</type>
</CustomField>